applications/maas/input/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    opendatahub.io/managed: "false"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: maas-default-gateway
    app.kubernetes.io/name: maas
    opendatahub.io/managed: "false"
  name: maas-default-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: maas.${CLUSTER_DOMAIN}
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: maas.${CLUSTER_DOMAIN}
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: default-gateway-tls
      mode: Terminate
