applications/maas/input/maas-api.yaml
# oc kustomize https://github.com/opendatahub-io/models-as-a-service//deployment/overlays/openshift?ref=39e62e98f382621e401211ae21cb9de0601b8266
---
apiVersion: v1
kind: Namespace
metadata:
  name: maas-api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: maas-api
    app.kubernetes.io/part-of: models-as-a-service
  name: maas-api
  namespace: maas-api
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: maas-api
    app.kubernetes.io/part-of: models-as-a-service
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: maas-api
    app.kubernetes.io/part-of: models-as-a-service
  name: maas-api
  namespace: maas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: maas-api
      app.kubernetes.io/part-of: models-as-a-service
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: maas-api
        app.kubernetes.io/part-of: models-as-a-service
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/opendatahub/maas-api:latest-0681979
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        name: maas-api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: maas-api
      terminationGracePeriodSeconds: 30
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-default
spec:
  controllerName: openshift.io/gateway-controller/v1
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    opendatahub.io/managed: "false"
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: maas-default-gateway
    app.kubernetes.io/name: maas
    opendatahub.io/managed: "false"
  name: maas-default-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: maas.apps.roadshow-6kr2w.sandbox1763.opentlc.com
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: maas.apps.roadshow-6kr2w.sandbox1763.opentlc.com
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: default-ingress-cert
      mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: maas-api
    app.kubernetes.io/part-of: models-as-a-service
  name: maas-api-route
  namespace: maas-api
spec:
  parentRefs:
  - name: maas-default-gateway
    namespace: openshift-ingress
  rules:
  - backendRefs:
    - name: maas-api
      port: 8080
      weight: 100
    matches:
    - path:
        type: PathPrefix
        value: /v1/models
  - backendRefs:
    - name: maas-api
      port: 8080
      weight: 100
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /maas-api
